--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,26 @@
     <string name="calculator_item_menu">Calculator</string>
     <string name="camera_item_menu">Camera</string>
     <string name="weather_item_menu">Weather</string>
+
+    <string name="btn_one">1</string>
+    <string name="btn_two">2</string>
+    <string name="btn_three">3</string>
+    <string name="btn_four">4</string>
+    <string name="btn_five">5</string>
+    <string name="btn_six">6</string>
+    <string name="btn_seven">7</string>
+    <string name="btn_eight">8</string>
+    <string name="btn_nine">9</string>
+    <string name="btn_zero">0</string>
+    <string name="btn_equals">=</string>
+    <string name="btn_point">.</string>
+    <string name="btn_plus">+</string>
+    <string name="btn_minus">-</string>
+    <string name="btn_multiplication">x</string>
+    <string name="btn_division">/</string>
+    <string name="btn_percent">%</string>
+    <string name="btn_back_space">DEL</string>
+    <string name="btn_clear">C</string>
+    <string name="btn_push">жми</string>
+    <string name="hint_0">0</string>
 </resources>
