--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,7 +36,7 @@
     <string name="btn_percent">%</string>
     <string name="btn_back_space">DEL</string>
     <string name="btn_clear">C</string>
-    <string name="btn_push">жми</string>
+    <string name="btn_push"></string>
     <string name="hint_0">0</string>
     <string name="lets_roll">Let\'s Roll</string>
     <string name="the_dice">The Dice</string>
